--- a/MOBA-Sandbox.csproj
+++ b/MOBA-Sandbox.csproj
@@ -240,8 +240,10 @@
     <Compile Include="Assets\PhotonChatApi\IChatClientListener.cs" />
     <Compile Include="Assets\Scripts\Camera\CameraManager.cs" />
     <Compile Include="Assets\Scripts\ChampionAbilities\Ezreal\EzrealQ.cs" />
+    <Compile Include="Assets\Scripts\ChampionAbilities\Ezreal\EzrealW.cs" />
     <Compile Include="Assets\Scripts\ChampionAbilities\Lucian\LucianE.cs" />
     <Compile Include="Assets\Scripts\ChampionAbilities\Lucian\LucianR.cs" />
+    <Compile Include="Assets\Scripts\ChampionAbilities\Lucian\LucianW.cs" />
     <Compile Include="Assets\Scripts\Daniel Scripts\Ability.cs" />
     <Compile Include="Assets\Scripts\Daniel Scripts\CharacterMotor.cs" />
     <Compile Include="Assets\Scripts\Daniel Scripts\CharacterScripts.cs" />
