--- a/MOBA-Sandbox.CSharp.csproj
+++ b/MOBA-Sandbox.CSharp.csproj
@@ -224,6 +224,7 @@
     <Compile Include="Assets\PhotonChatApi\ChatUserStatus.cs" />
     <Compile Include="Assets\PhotonChatApi\IChatClientListener.cs" />
     <Compile Include="Assets\Scripts\Camera\CameraManager.cs" />
+    <Compile Include="Assets\Scripts\ChampionAbilities\Ezreal\EzrealE.cs" />
     <Compile Include="Assets\Scripts\ChampionAbilities\Ezreal\EzrealQ.cs" />
     <Compile Include="Assets\Scripts\ChampionAbilities\Ezreal\EzrealR.cs" />
     <Compile Include="Assets\Scripts\ChampionAbilities\Ezreal\EzrealW.cs" />
