--- a/MOBA-Sandbox.CSharp.csproj
+++ b/MOBA-Sandbox.CSharp.csproj
@@ -225,6 +225,8 @@
     <Compile Include="Assets\PhotonChatApi\IChatClientListener.cs" />
     <Compile Include="Assets\Scripts\Camera\CameraManager.cs" />
     <Compile Include="Assets\Scripts\ChampionAbilities\AbilityType.cs" />
+    <Compile Include="Assets\Scripts\ChampionAbilities\Blink.cs" />
+    <Compile Include="Assets\Scripts\ChampionAbilities\Dash.cs" />
     <Compile Include="Assets\Scripts\ChampionAbilities\Ezreal\EzrealE.cs" />
     <Compile Include="Assets\Scripts\ChampionAbilities\Ezreal\EzrealQ.cs" />
     <Compile Include="Assets\Scripts\ChampionAbilities\Ezreal\EzrealR.cs" />
@@ -232,6 +234,7 @@
     <Compile Include="Assets\Scripts\ChampionAbilities\Lucian\LucianE.cs" />
     <Compile Include="Assets\Scripts\ChampionAbilities\Lucian\LucianR.cs" />
     <Compile Include="Assets\Scripts\ChampionAbilities\Lucian\LucianW.cs" />
+    <Compile Include="Assets\Scripts\ChampionAbilities\Movement.cs" />
     <Compile Include="Assets\Scripts\ChampionAbilities\Skillshot.cs" />
     <Compile Include="Assets\Scripts\Daniel Scripts\Ability.cs" />
     <Compile Include="Assets\Scripts\Daniel Scripts\CharacterMotor.cs" />
