--- a/MOBA-Sandbox.CSharp.csproj
+++ b/MOBA-Sandbox.CSharp.csproj
@@ -224,9 +224,11 @@
     <Compile Include="Assets\PhotonChatApi\ChatUserStatus.cs" />
     <Compile Include="Assets\PhotonChatApi\IChatClientListener.cs" />
     <Compile Include="Assets\Scripts\Camera\CameraManager.cs" />
-    <Compile Include="Assets\Scripts\ChampionAbilities\AbilityType.cs" />
-    <Compile Include="Assets\Scripts\ChampionAbilities\Blink.cs" />
-    <Compile Include="Assets\Scripts\ChampionAbilities\Dash.cs" />
+    <Compile Include="Assets\Scripts\ChampionAbilities\AbilityTypes\AbilityType.cs" />
+    <Compile Include="Assets\Scripts\ChampionAbilities\AbilityTypes\Blink.cs" />
+    <Compile Include="Assets\Scripts\ChampionAbilities\AbilityTypes\Dash.cs" />
+    <Compile Include="Assets\Scripts\ChampionAbilities\AbilityTypes\Movement.cs" />
+    <Compile Include="Assets\Scripts\ChampionAbilities\AbilityTypes\Skillshot.cs" />
     <Compile Include="Assets\Scripts\ChampionAbilities\Ezreal\EzrealE.cs" />
     <Compile Include="Assets\Scripts\ChampionAbilities\Ezreal\EzrealQ.cs" />
     <Compile Include="Assets\Scripts\ChampionAbilities\Ezreal\EzrealR.cs" />
@@ -234,8 +236,6 @@
     <Compile Include="Assets\Scripts\ChampionAbilities\Lucian\LucianE.cs" />
     <Compile Include="Assets\Scripts\ChampionAbilities\Lucian\LucianR.cs" />
     <Compile Include="Assets\Scripts\ChampionAbilities\Lucian\LucianW.cs" />
-    <Compile Include="Assets\Scripts\ChampionAbilities\Movement.cs" />
-    <Compile Include="Assets\Scripts\ChampionAbilities\Skillshot.cs" />
     <Compile Include="Assets\Scripts\Daniel Scripts\Ability.cs" />
     <Compile Include="Assets\Scripts\Daniel Scripts\CharacterMotor.cs" />
     <Compile Include="Assets\Scripts\Daniel Scripts\CharacterScripts.cs" />
