--- a/MOBA-Sandbox.CSharp.csproj
+++ b/MOBA-Sandbox.CSharp.csproj
@@ -225,6 +225,7 @@
     <Compile Include="Assets\PhotonChatApi\IChatClientListener.cs" />
     <Compile Include="Assets\Scripts\Billboard.cs" />
     <Compile Include="Assets\Scripts\Camera\CameraManager.cs" />
+    <Compile Include="Assets\Scripts\CastTimeBarManager.cs" />
     <Compile Include="Assets\Scripts\ChampionAbilities\AbilityTypes\AbilityType.cs" />
     <Compile Include="Assets\Scripts\ChampionAbilities\AbilityTypes\Blink.cs" />
     <Compile Include="Assets\Scripts\ChampionAbilities\AbilityTypes\Dash.cs" />
