--- a/MOBA-Sandbox.CSharp.csproj
+++ b/MOBA-Sandbox.CSharp.csproj
@@ -223,9 +223,7 @@
     <Compile Include="Assets\PhotonChatApi\ChatState.cs" />
     <Compile Include="Assets\PhotonChatApi\ChatUserStatus.cs" />
     <Compile Include="Assets\PhotonChatApi\IChatClientListener.cs" />
-    <Compile Include="Assets\Scripts\Billboard.cs" />
     <Compile Include="Assets\Scripts\Camera\CameraManager.cs" />
-    <Compile Include="Assets\Scripts\CastTimeBarManager.cs" />
     <Compile Include="Assets\Scripts\ChampionAbilities\AbilityTypes\AbilityType.cs" />
     <Compile Include="Assets\Scripts\ChampionAbilities\AbilityTypes\Blink.cs" />
     <Compile Include="Assets\Scripts\ChampionAbilities\AbilityTypes\Dash.cs" />
@@ -244,27 +242,29 @@
     <Compile Include="Assets\Scripts\Daniel Scripts\Equipment.cs" />
     <Compile Include="Assets\Scripts\Daniel Scripts\FPSInputController.cs" />
     <Compile Include="Assets\Scripts\Daniel Scripts\GameManager.cs" />
-    <Compile Include="Assets\Scripts\EntityTeam.cs" />
-    <Compile Include="Assets\Scripts\Health.cs" />
-    <Compile Include="Assets\Scripts\MouseHover.cs" />
+    <Compile Include="Assets\Scripts\Entities\EntityTeam.cs" />
+    <Compile Include="Assets\Scripts\Entities\Health.cs" />
+    <Compile Include="Assets\Scripts\Entities\MouseHover.cs" />
+    <Compile Include="Assets\Scripts\Entities\Player\Player.cs" />
+    <Compile Include="Assets\Scripts\Entities\Player\PlayerBase.cs" />
+    <Compile Include="Assets\Scripts\Entities\Player\PlayerInput.cs" />
+    <Compile Include="Assets\Scripts\Entities\Player\PlayerMouseSelection.cs" />
+    <Compile Include="Assets\Scripts\Entities\Player\PlayerMovement.cs" />
+    <Compile Include="Assets\Scripts\Entities\Player\PlayerOrientation.cs" />
+    <Compile Include="Assets\Scripts\Entities\Player\PlayerProjectileCollision.cs" />
+    <Compile Include="Assets\Scripts\Entities\Player\PlayerShootProjectile.cs" />
+    <Compile Include="Assets\Scripts\Entities\Player\PlayerSkill.cs" />
+    <Compile Include="Assets\Scripts\Entities\Player\Team.cs" />
     <Compile Include="Assets\Scripts\MovementPoint\MovementCapsule.cs" />
     <Compile Include="Assets\Scripts\Network\NetworkManager.cs" />
-    <Compile Include="Assets\Scripts\Player\Player.cs" />
-    <Compile Include="Assets\Scripts\Player\PlayerBase.cs" />
-    <Compile Include="Assets\Scripts\Player\PlayerInput.cs" />
-    <Compile Include="Assets\Scripts\Player\PlayerMouseSelection.cs" />
-    <Compile Include="Assets\Scripts\Player\PlayerMovement.cs" />
-    <Compile Include="Assets\Scripts\Player\PlayerOrientation.cs" />
-    <Compile Include="Assets\Scripts\Player\PlayerProjectileCollision.cs" />
-    <Compile Include="Assets\Scripts\Player\PlayerShootProjectile.cs" />
-    <Compile Include="Assets\Scripts\Player\PlayerSkill.cs" />
-    <Compile Include="Assets\Scripts\Player\Team.cs" />
     <Compile Include="Assets\Scripts\Projectiles\ProjectileMovement.cs" />
     <Compile Include="Assets\Scripts\Spawners\RotateSpawner.cs" />
     <Compile Include="Assets\Scripts\StaticObjects.cs" />
+    <Compile Include="Assets\Scripts\UI\Billboard.cs" />
+    <Compile Include="Assets\Scripts\UI\CastTimeBarManager.cs" />
     <Compile Include="Assets\Scripts\UI\SkillCooldown.cs" />
-    <Compile Include="Assets\Scripts\UIFollowPlayer.cs" />
-    <Compile Include="Assets\Scripts\UIHealth.cs" />
+    <Compile Include="Assets\Scripts\UI\UIFollowPlayer.cs" />
+    <Compile Include="Assets\Scripts\UI\UIHealth.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Photon Unity Networking\Demos\DemoBoxes\Resources\eurof_tt.txt" />
