Fixed uncastable skills and movement after dashes + death

--- a/MOBA-Sandbox.CSharp.csproj
+++ b/MOBA-Sandbox.CSharp.csproj
@@ -248,6 +248,7 @@
     <Compile Include="Assets\Scripts\Entities\MouseHover.cs" />
     <Compile Include="Assets\Scripts\Entities\Player\Player.cs" />
     <Compile Include="Assets\Scripts\Entities\Player\PlayerBase.cs" />
+    <Compile Include="Assets\Scripts\Entities\Player\PlayerDeath.cs" />
     <Compile Include="Assets\Scripts\Entities\Player\PlayerInput.cs" />
     <Compile Include="Assets\Scripts\Entities\Player\PlayerMouseSelection.cs" />
     <Compile Include="Assets\Scripts\Entities\Player\PlayerMovement.cs" />
