--- a/MOBA-Sandbox.CSharp.csproj
+++ b/MOBA-Sandbox.CSharp.csproj
@@ -246,7 +246,9 @@
     <Compile Include="Assets\Scripts\Entities\EntityTeam.cs" />
     <Compile Include="Assets\Scripts\Entities\Health.cs" />
     <Compile Include="Assets\Scripts\Entities\MouseHover.cs" />
-    <Compile Include="Assets\Scripts\Entities\Player\Player.cs" />
+    <Compile Include="Assets\Scripts\Entities\Player\Champions\Ezreal.cs" />
+    <Compile Include="Assets\Scripts\Entities\Player\Champions\Lucian.cs" />
+    <Compile Include="Assets\Scripts\Entities\Player\Champions\Player.cs" />
     <Compile Include="Assets\Scripts\Entities\Player\PlayerAttackMovement.cs" />
     <Compile Include="Assets\Scripts\Entities\Player\PlayerBase.cs" />
     <Compile Include="Assets\Scripts\Entities\Player\PlayerDeath.cs" />
