Lucian passive PogChamp

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -197,21 +197,26 @@
      <Compile Include="Assets\Scripts\Camera\CameraManager.cs" />
      <Compile Include="Assets\Scripts\ChampionAbilities\AbilityTypes\AbilityType.cs" />
      <Compile Include="Assets\Scripts\ChampionAbilities\AbilityTypes\Blink.cs" />
+     <Compile Include="Assets\Scripts\ChampionAbilities\AbilityTypes\Buff.cs" />
      <Compile Include="Assets\Scripts\ChampionAbilities\AbilityTypes\Dash.cs" />
      <Compile Include="Assets\Scripts\ChampionAbilities\AbilityTypes\Movement.cs" />
      <Compile Include="Assets\Scripts\ChampionAbilities\AbilityTypes\Skillshot.cs" />
      <Compile Include="Assets\Scripts\ChampionAbilities\Ezreal\EzrealE.cs" />
+     <Compile Include="Assets\Scripts\ChampionAbilities\Ezreal\EzrealP.cs" />
      <Compile Include="Assets\Scripts\ChampionAbilities\Ezreal\EzrealQ.cs" />
      <Compile Include="Assets\Scripts\ChampionAbilities\Ezreal\EzrealR.cs" />
      <Compile Include="Assets\Scripts\ChampionAbilities\Ezreal\EzrealW.cs" />
      <Compile Include="Assets\Scripts\ChampionAbilities\Lucian\LucianE.cs" />
+     <Compile Include="Assets\Scripts\ChampionAbilities\Lucian\LucianP.cs" />
      <Compile Include="Assets\Scripts\ChampionAbilities\Lucian\LucianQ.cs" />
      <Compile Include="Assets\Scripts\ChampionAbilities\Lucian\LucianR.cs" />
      <Compile Include="Assets\Scripts\ChampionAbilities\Lucian\LucianW.cs" />
      <Compile Include="Assets\Scripts\Entities\EntityTeam.cs" />
      <Compile Include="Assets\Scripts\Entities\Health.cs" />
      <Compile Include="Assets\Scripts\Entities\MouseHover.cs" />
-     <Compile Include="Assets\Scripts\Entities\Player\BasicAttack.cs" />
+     <Compile Include="Assets\Scripts\Entities\Player\BasicAttack\BasicAttack.cs" />
+     <Compile Include="Assets\Scripts\Entities\Player\BasicAttack\EzrealBasicAttack.cs" />
+     <Compile Include="Assets\Scripts\Entities\Player\BasicAttack\LucianBasicAttack.cs" />
      <Compile Include="Assets\Scripts\Entities\Player\Champions\Ezreal.cs" />
      <Compile Include="Assets\Scripts\Entities\Player\Champions\Lucian.cs" />
      <Compile Include="Assets\Scripts\Entities\Player\Champions\Player.cs" />
