--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -216,9 +216,11 @@
      <Compile Include="Assets\Scripts\ChampionAbilities\Lucian\LucianQ.cs" />
      <Compile Include="Assets\Scripts\ChampionAbilities\Lucian\LucianR.cs" />
      <Compile Include="Assets\Scripts\ChampionAbilities\Lucian\LucianW.cs" />
+     <Compile Include="Assets\Scripts\ChampionAbilities\SkillId.cs" />
      <Compile Include="Assets\Scripts\Entities\EntityTeam.cs" />
      <Compile Include="Assets\Scripts\Entities\Health.cs" />
      <Compile Include="Assets\Scripts\Entities\MouseHover.cs" />
+     <Compile Include="Assets\Scripts\Entities\MovementSpeed.cs" />
      <Compile Include="Assets\Scripts\Entities\Player\BasicAttack\ArcherBasicAttack.cs" />
      <Compile Include="Assets\Scripts\Entities\Player\BasicAttack\BasicAttack.cs" />
      <Compile Include="Assets\Scripts\Entities\Player\BasicAttack\BasicAttackReset.cs" />
